<resources>
    <string name="app_name">EventMPro</string>
    <string name="principal_description">Crea y diseña tu propio evento desde la página web oficial de nuestro servicio, contando con un gran número de ajustes que le darán a tu evento maniobrabilidad tanto para asistentes como organizadores. También genera tu propia aplicación móvil exclusiva para tu evento y cárgala con tan solo un archivo que descargas en tu móvil.</string>
    <string name="principal_objetivo">Descripción</string>
    <string name="login_in">Cargar</string>
    <string name="principal_cargar">Carga Tu Archivo</string>
    <string name="btn_text_cargar">Carga Tu Archivo</string>
    <string name="explore_folder">Ruta Actual</string>
    <string name="action_settings">Settings</string>
    <string name="carga_title">Archivo Seleccionado</string>
    <string name="empy">No se encuentran datos registrados</string>
    <string name="img_ponente">imagen del ponente</string>
    <string name="img_tipo">Tipo</string>
    <string name="img_empresa">Empresa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_text_noti">Notificaciones</string>
    <string name="btn_text_ubi">Ubicación</string>
    <string name="btn_text_horario">Horario</string>
    <string name="btn_text_ponentes">Ponentes</string>
    <string name="btn_text_principal">Principal</string>
    <string name="paso2">Ya tienes tu archivo seleccionado correctamente, el siguiente paso es cargarlo a la aplicación con el botón cargar datos o sino estas seguro del archivo seleccionado, puedes volver a seleccionar otro archivo con el botón buscar archivo.</string>
    <string name="btn_text_backup">Cargar Datos</string>
    <string name="btn_text_archivo">Buscar Archivo</string>
    <string name="alert_msg">Desea cargar los datos.</string>
    <string name="ok">Si</string>
    <string name="alert_title">Cargar Datos</string>
    <string name="seleccion">Archivo Selecccionado.</string>
    <string name="desimg">imagen</string>
    <string name="prin_obj">Objetivo</string>
    <string name="prin_date">Fecha</string>
    <string name="prin_place">Lugar</string>
    <string name="prin_des">Descripción</string>
    <string name="cancel">No</string>
    <string name="action_more">Mas</string>
    <string name="action_out">Salir del Evento</string>
    <string name="action_info">Info</string>
    <string name="alert_title_event">Salir del Evento</string>
    <string name="alert_msg_event">¿Está seguro de borrar todos los datos del evento? (Tenga en cuenta que una vez salga del evento, tiene que volver a cargar otro evento)</string>
    <string name="msj_carga">El archivo selecionado es no valido o esta dañado (Recuerde que el tipo de archivo es .xml)</string>
    <string name="conection_internet">Por favor conectate a internet para obtener la programacion mas reciente.</string>
    <string name="alert_beacon">Pabellon Cercano</string>
    <string name="alert_beacon2">Pabellon 2 Cercano</string>
    <string name="alert_msg_beacon">¿Desea ver su ubicacion en el mapa?</string>
    <string name="conection_internet_imagenes">Por favor conectate a internet para tener los datos mas actualizados</string>
    <string name="btn_text_linkedin">Linkedin</string>
    <string name="conection_internet_linkedin">El ponente no tiene registrado un perfil</string>
    <string name="hor_encargado">Encargado:</string>
    <string name="hor_evento">Evento:</string>
    <string name="alert_msg_noti">¿Esta seguro de elminar la notificación?</string>
    <string name="alert_title_noti">Eliminar</string>
    <string name="empy_map">No se encuentran datos registrados, igual puedes navegar por el mapa</string>


</resources>
