<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="handler"
            type="unicauca.movil.eventmpro.Programacion"
            />
    </data>

    <TableLayout
        android:id="@+id/activity_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff"
        android:stretchColumns="*"
        >

        <TableLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                >

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"/>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </TableLayout>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/small">


            <FrameLayout>

                <LinearLayout
                    android:id="@+id/btnPonentes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="@{()->handler.goToPrincipal()}"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_btn"
                        android:layout_height="@dimen/icon_btn"
                        app:srcCompat="@drawable/ic_principal" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_text_principal"
                        android:textColor="@color/txtBtn" />
                </LinearLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/btnHorario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="@{()->handler.goToPonente()}"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_btn"
                        android:layout_height="@dimen/icon_btn"
                        app:srcCompat="@drawable/ic_ponentes" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_text_ponentes"
                        android:textColor="@color/txtBtn" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout>

                <LinearLayout
                    android:id="@+id/btnMapa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="@{()->handler.goToUbicacion()}"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_btn"
                        android:layout_height="@dimen/icon_btn"
                        app:srcCompat="@drawable/ic_place" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_text_ubi"
                        android:textColor="@color/txtBtn" />

                </LinearLayout>
            </FrameLayout>

            <FrameLayout>

                <LinearLayout
                    android:id="@+id/btnNoti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="@{()->handler.goToNotificaciones()}"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_btn"
                        android:layout_height="@dimen/icon_btn"
                        app:srcCompat="@drawable/ic_notification" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_text_noti"
                        android:textColor="@color/txtBtn" />

                </LinearLayout>
            </FrameLayout>


        </TableRow>

    </TableLayout>
</layout>


