<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="event"
            type="unicauca.movil.eventmpro.models.Evento"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardElevation="@dimen/cardelevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="@dimen/img_50"
                    android:layout_height="@dimen/img_50"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/desimg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_date" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/prin_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView14"
                    app:layout_constraintTop_toTopOf="@+id/imageView14"
                    tools:text="Fecha" />

                <TextView
                    android:id="@+id/fecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@{event.fecha}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    tools:text="Fecha del evento" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="@dimen/img_50"
                    android:layout_height="@dimen/img_50"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/desimg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fecha"
                    app:srcCompat="@drawable/ic_place" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/prin_place"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView15"
                    app:layout_constraintTop_toTopOf="@+id/imageView15"
                    tools:text="Lugar" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@{event.lugarevento}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView15"
                    app:layout_constraintTop_toBottomOf="@+id/textView15"
                    tools:text="Lugar del evento" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/prin_des"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView15"
                    tools:text="Descripción:" />

                <TextView
                    android:id="@+id/des"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:text="@{event.descripcion}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="Descripción del evento" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</layout>
